--- a/404.md
+++ b/404.md
@@ -1,1 +1,1 @@
-<p align="center"><img  alt="Status code 404: Under construction, work in progress" align="center" src="https://olicrypto.com/wp-content/uploads/2021/10/under_construction.jpg"/></p>
+<p align="center"><img  alt="Status code 404: Under construction, work in progress" title="Status code 404: Under construction, work in progress" align="center" src="https://olicrypto.com/wp-content/uploads/2021/10/under_construction.jpg"/></p>
